<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_darkblue"
    tools:context=".FragmentMoviesDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_one"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_one" />

        <ImageView
            android:id="@+id/movie_logo_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-30dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orig" />

        <View
            android:id="@+id/gradient_logo_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient_movie_logo"
            app:layout_constraintBottom_toTopOf="@+id/movie_name_text"
            app:layout_constraintEnd_toEndOf="@+id/movie_logo_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/up_baseline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="56dp" />

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:background="@drawable/path"
            android:contentDescription="@string/back_arrow"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toTopOf="@+id/up_baseline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:fontFamily="@font/roboto"
            android:text="@string/back"
            android:textColor="@color/color_gray_path"
            app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
            app:layout_constraintStart_toEndOf="@+id/back_arrow"
            app:layout_constraintTop_toTopOf="@+id/back_arrow" />

        <TextView
            android:id="@+id/pg"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_half"
            android:background="@drawable/back_rectangle"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:singleLine="false"
            android:text="@string/age_13"
            android:textColor="@color/color_white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/movie_name_text"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:fontFamily="@font/roboto_medium"
            android:lines="2"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/avenger_end_game"
            android:textColor="@color/color_white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_logo_image" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/quater_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/genre_action"
            android:textColor="@color/color_pink_genre"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_text" />


        <RatingBar
            android:id="@+id/rating_star"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half"
            android:progressBackgroundTint="@color/color_gray_rating"
            android:progressTint="@color/color_pink_genre"
            android:rating="4"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <TextView
            android:id="@+id/movie_reviews_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_half"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/reviews_125"
            android:textColor="@color/color_gray_rating"
            app:layout_constraintBottom_toBottomOf="@+id/rating_star"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/rating_star"
            app:layout_constraintTop_toTopOf="@+id/rating_star" />

        <TextView
            android:id="@+id/storyline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/storyline"
            android:textColor="@color/color_gray_storyline"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_reviews_text" />

        <TextView
            android:id="@+id/storyline_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/quater_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/storyline_content"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/storyline_text" />

        <TextView
            android:id="@+id/cast_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:fontFamily="@font/roboto_medium"
            android:shadowColor="@color/shadow_text"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/cast"
            android:textColor="@color/color_gray_storyline"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/storyline_content" />

        <ImageView
            android:id="@+id/actor1_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_half"
            android:layout_marginTop="@dimen/margin_7"
            android:layout_marginEnd="@dimen/quater_margin"
            android:contentDescription="@string/actor_1_image"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/actor2_image"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cast_text"
            app:srcCompat="@drawable/movie1" />

        <ImageView
            android:id="@+id/actor2_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/quater_margin"
            android:layout_marginEnd="@dimen/quater_margin"
            android:contentDescription="@string/actor_2_image"
            app:layout_constraintBottom_toBottomOf="@+id/actor1_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor3_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor1_image"
            app:layout_constraintTop_toTopOf="@+id/actor1_image"
            app:srcCompat="@drawable/movie2" />

        <ImageView
            android:id="@+id/actor3_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/quater_margin"

            android:layout_marginEnd="@dimen/quater_margin"
            android:contentDescription="@string/actor_3_image"
            app:layout_constraintBottom_toBottomOf="@+id/actor2_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor4_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor2_image"
            app:layout_constraintTop_toTopOf="@+id/actor2_image"
            app:srcCompat="@drawable/movie3" />

        <ImageView
            android:id="@+id/actor4_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/quater_margin"

            android:layout_marginEnd="@dimen/margin_half"
            android:contentDescription="@string/actor_4_image"
            app:layout_constraintBottom_toBottomOf="@+id/actor3_image"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor3_image"
            app:layout_constraintTop_toTopOf="@+id/actor3_image"
            app:srcCompat="@drawable/movie4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:fontFamily="@font/roboto_medium"
            android:singleLine="false"
            android:text="@string/robert_downey"
            android:textColor="@color/color_gray_actor"
            app:layout_constraintEnd_toEndOf="@+id/actor1_image"
            app:layout_constraintStart_toStartOf="@+id/actor1_image"
            app:layout_constraintTop_toBottomOf="@+id/actor1_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chris_evans"
            android:textColor="@color/color_gray_actor"
            app:layout_constraintEnd_toEndOf="@+id/actor2_image"
            app:layout_constraintStart_toStartOf="@+id/actor2_image"
            app:layout_constraintTop_toBottomOf="@+id/actor2_image" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/color_gray_actor"
            app:layout_constraintEnd_toEndOf="@+id/actor3_image"
            app:layout_constraintStart_toStartOf="@+id/actor3_image"
            app:layout_constraintTop_toBottomOf="@+id/actor3_image" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/color_gray_actor"
            app:layout_constraintEnd_toEndOf="@+id/actor4_image"
            app:layout_constraintStart_toStartOf="@+id/actor4_image"
            app:layout_constraintTop_toBottomOf="@+id/actor4_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>